--- a/index.html
+++ b/index.html
@@ -60,17 +60,6 @@
             </div>
 
             <hr>
-            <div id="coneControls" style="display:none;">
-                <label>Medical Cone</label>
-                <select id="coneSelect" class="full-width">
-                    <option value="none">No Cone</option>
-                    <option value="normal">Normal Cone</option>
-                    <option value="scream">Scream Cone</option>
-                    <option value="karate">Karate Cone</option>
-                    <option value="yap">Yap Cone</option>
-                </select>
-                <hr>
-            </div>
 
             <label>Special Poses (*)</label>
             <select id="specialSelect"></select>
@@ -104,20 +93,20 @@ const acts = {
     act1: { src: 'act1_beebee.png', grid: { width: 4 }, anchor: { x: 273, y: 200 }, frame: { w: 720, h: 500 }, frames: ["body_normal","body_fear","body_point_crotch","body_point_heart","body_sing","mouth_normal","mouth_normal_talk","mouth_small","mouth_small_talk","mouth_small_lock","eyes_normal","eyes_normal_right","eyes_uncertain","eyes_uncertain_right","eyes_narrow","eyes_narrow_eyebrow","eyes_fear","eyes_pretty","eyes_wat","eyes_wat_2","body_panic*","body_panic_2*","body_scream_anger*","body_scream_anger_2*","body_scream*","body_scream_2*","body_flail*","body_flail2*","body_flail3*","body_flail4*","mouth_smile","mouth_smile_talk","mouth_smile_lock","eyes_smile","eyes_look","eyes_look_sad","eyes_look_sad_smile","eyes_pained1","eyes_pained2","mouth_shut","eyes_anger","body_meta*","body_laugh*","body_pride_talk*","body_pride*","body_squeeze_talk*","body_squeeze*"], loops: [{ trigger: "panic*", sequence: ["body_panic*", "body_panic_2*"], wait: 0.07 }, { trigger: "scream*", sequence: ["body_scream*", "body_scream_2*"], wait: 0.1 }] },
     act2: { src: 'battle_bb.png', grid: { width: 10 }, anchor: { x: 292.5, y: 249.4 }, frame: { w: 720, h: 500 }, frames: ["body_normal","body_two_up","body_chest","body_point","body_one_up","body_scream_a_1*","body_scream_a_2*","body_shocked*","mouth_small","mouth_small_talk","mouth_normal","mouth_normal_talk","mouth_smile","mouth_smile_talk","eyes_normal","eyes_normal_r","eyes_suspect","eyes_suspect_r","eyes_sad","eyes_sad_r","eyes_shock","eyes_happy","eyes_happy_r","eyes_closed","eyes_judge","body_judge_1","body_judge_2","body_scream_b_1*","body_scream_b_2*","body_scream_c_1*","body_scream_c_2*","body_cry_1*","body_cry_2*","body_cry_3*","body_cry_4","mouth_cry_talk","mouth_cry","eyes_cry","eyes_cry_2","body_cry_5*","body_cry_6","mouth_right","mouth_right_talk","eyes_cry_r_1","eyes_cry_r_2","eyes_cry_r_3","eyes_cry_r_4","mouth_blank","eyes_blank","eyes_asdf","eyes_angry","eyes_sad_2","eyes_wat","body_attacked*","body_frazzled","mouth_frazzled_talk","mouth_frazzled","eyes_frazzled","body_panicked","mouth_panicked","mouth_panicked_talk","eyes_panicked","body_special_a*","body_special_b_1*","body_special_b_2*","body_special_b_3*","body_special_c*","body_final_1*","body_final_2*","body_final_3*","body_final_4*","body_yell_1*","body_yell_2*","body_yell_angry_1*","body_yell_angry_2*"], loops: [{ trigger: "final*", sequence: ["body_final_1*", "body_final_2*", "body_final_3*", "body_final_4*"], wait: 0.05 }] },
     act3: { src: 'fight_bb.png', grid: { width: 8 }, anchor: { x: 270, y: 223 }, frame: { w: 720, h: 500 }, frames: ["body_normal_1","body_normal_2","body_normal_3","body_normal_4","mouth_sorry","mouth_sorry_talk","eyes_sorry_down","eyes_sorry","eyes_sorry_up","mouth_normal","mouth_normal_talk","eyes_oh_crap","eyes_start","eyes_normal","eyes_angry","eyes_sad","mouth_ignore","mouth_ignore_talk","eyes_ignore","eyes_ignore_oh_crap","body_attacked*","body_dead*","body_special_attack*"], loops: [] },
-    act4_convo: { src: 'bb_convo.png', grid: { width: 8 }, anchor: { x: 171, y: 242 }, frame: { w: 500, h: 500 }, layers: ["coneb", "body", "mouth", "eyes", "cone"], frames: ["body_normal","body_chest","body_two_up","body_one_up","body_paw","cone_normal","coneb_normal","mouth_normal","mouth_normal_talk","mouth_narrow","mouth_narrow_talk","mouth_smile","mouth_smile_talk","mouth_scream","mouth_scream_talk","cone_scream","coneb_scream","eyes_normal","eyes_normal_r","eyes_normal_u","eyes_normal_d","eyes_look_down","eyes_scream","eyes_scream_sad","eyes_super_sad","eyes_closed","eyes_closed_annoyed","eyes_sexy","eyes_smile","eyes_smile_r","eyes_smile_u","eyes_smile_d","eyes_angry","eyes_angry_r","eyes_angry_u","eyes_angry_d","eyes_surprise","eyes_surprise_r","eyes_surprise_u","eyes_surprise_d","eyes_annoyed","eyes_annoyed_r","eyes_annoyed_u","eyes_annoyed_d","eyes_sad","eyes_sad_r","eyes_sad_u","eyes_sad_d","eyes_suspect","eyes_suspect_r","body_karate_1*","body_karate_2*","cone_karate","coneb_karate","body_yap_1*","body_yap_2*","body_yap_3*","body_yap_4*","cone_yap_1","cone_yap_2","cone_yap_3","cone_yap_4","eyes_blank","mouth_blank","coneb_blank"], loops: [{ trigger: "yap*", sequence: ["body_yap_1*", "body_yap_2*", "body_yap_3*", "body_yap_4*"], wait: 0.05 }] },
+    act4_convo: { src: 'bb_convo.png', grid: { width: 8 }, anchor: { x: 171, y: 242 }, frame: { w: 500, h: 500 }, layers: ["coneb", "body", "mouth", "eyes", "cone"], frames: ["body_normal","body_chest","body_two_up","body_one_up","body_paw","cone_normal","coneb_normal","mouth_normal","mouth_normal_talk","mouth_narrow","mouth_narrow_talk","mouth_smile","mouth_smile_talk","mouth_scream","mouth_scream_talk","cone_scream","coneb_scream","eyes_normal","eyes_normal_r","eyes_normal_u","eyes_normal_d","eyes_look_down","eyes_scream","eyes_scream_sad","eyes_super_sad","eyes_closed","eyes_closed_annoyed","eyes_sexy","eyes_smile","eyes_smile_r","eyes_smile_u","eyes_smile_d","eyes_angry","eyes_angry_r","eyes_angry_u","eyes_angry_d","eyes_surprise","eyes_surprise_r","eyes_surprise_u","eyes_surprise_d","eyes_annoyed","eyes_annoyed_r","eyes_annoyed_u","eyes_annoyed_d","eyes_sad","eyes_sad_r","eyes_sad_u","eyes_sad_d","eyes_suspect","eyes_suspect_r","body_karate_1*","body_karate_2*","cone_karate","coneb_karate","body_yap_1*","body_yap_2*","body_yap_3*","body_yap_4*","cone_yap_1","cone_yap_2","cone_yap_3","cone_yap_4","eyes_blank","mouth_blank","coneb_blank"], loops: [{ trigger: "yap*", sequence: ["body_yap_1*", "body_yap_2*", "body_yap_3*", "body_yap_4*"], wait: 0.05 }, { trigger: "karate*", sequence: ["body_karate_1*", "body_karate_2*"], wait: 0.25 }] },
     act4_closer: { src: 'bb_closer.png', grid: { width: 8 }, anchor: { x: 171, y: 242 }, frame: { w: 500, h: 500 }, layers: ["body"], frames: ["body_normal","body_normal_2","body_normal_3","body_normal_4","body_normal_5","body_normal_6","body_normal_7","body_normal_8","body_normal_9","body_normal_10","body_normal_11","body_normal_12","body_normal_13","body_normal_14","body_normal_15","body_normal_16","body_normal_17","mouth_blank","body_normal_18","body_normal_19","body_normal_20","body_normal_21","eyes_blank","eyes_blank_2","eyes_blank_3","eyes_blank_4","eyes_blank_5","eyes_blank_6","eyes_blank_7","body_normal_22"], loops: [] }
 };
 
 const canvas = document.getElementById('beebeeCanvas'), ctx = canvas.getContext('2d');
 let currentAct = 'act1', ticker = 0, lastTime = 0, animTimer = 0, animIndex = 0, isLooping = false, vibrateOn = false, isFlipped = false;
 const images = {}; Object.keys(acts).forEach(k => { images[k] = new Image(); images[k].src = acts[k].src; });
-const bSel = document.getElementById('bodySelect'), mSel = document.getElementById('mouthSelect'), eSel = document.getElementById('eyesSelect'), sSel = document.getElementById('specialSelect'), cSel = document.getElementById('coneSelect'), aSel = document.getElementById('actSelect'), lBtn = document.getElementById('loopBtn'), rBtn = document.getElementById('randomBtn'), vBtn = document.getElementById('vibeToggle'), fBtn = document.getElementById('flipToggle'), dBtn = document.getElementById('mainDownloadBtn'), statusTxt = document.getElementById('status');
+const bSel = document.getElementById('bodySelect'), mSel = document.getElementById('mouthSelect'), eSel = document.getElementById('eyesSelect'), sSel = document.getElementById('specialSelect'), aSel = document.getElementById('actSelect'), lBtn = document.getElementById('loopBtn'), rBtn = document.getElementById('randomBtn'), vBtn = document.getElementById('vibeToggle'), fBtn = document.getElementById('flipToggle'), dBtn = document.getElementById('mainDownloadBtn'), statusTxt = document.getElementById('status');
 
-function saveState() { localStorage.setItem('beebee_state', JSON.stringify({ act: aSel.value, special: sSel.value, body: bSel.value, eyes: eSel.value, mouth: mSel.value, cone: cSel.value, vibe: vibrateOn, flip: isFlipped })); }
+function saveState() { localStorage.setItem('beebee_state', JSON.stringify({ act: aSel.value, special: sSel.value, body: bSel.value, eyes: eSel.value, mouth: mSel.value, vibe: vibrateOn, flip: isFlipped })); }
 function loadState() {
     const saved = localStorage.getItem('beebee_state'); if (!saved) return false;
     const s = JSON.parse(saved); currentAct = s.act; aSel.value = s.act; populateSelects(false);
-    sSel.value = s.special; bSel.value = s.body; eSel.value = s.eyes; mSel.value = s.mouth; cSel.value = s.cone || 'none';
+    sSel.value = s.special; bSel.value = s.body; eSel.value = s.eyes; mSel.value = s.mouth; 
     vibrateOn = s.vibe; isFlipped = s.flip || false; updateUI(); return true;
 }
 
@@ -128,7 +117,6 @@ function populateSelects(shouldSave = true) {
         const o = document.createElement('option'); o.value = name; o.textContent = name;
         if (name.includes('*')) sSel.appendChild(o); else if (name.startsWith('body')) bSel.appendChild(o); else if (name.startsWith('mouth')) mSel.appendChild(o); else if (name.startsWith('eyes')) eSel.appendChild(o);
     });
-    document.getElementById('coneControls').style.display = currentAct === 'act4_convo' ? 'block' : 'none';
     updateUI(); if(shouldSave) saveState();
 }
 
@@ -143,7 +131,7 @@ function updateUI() {
 }
 
 aSel.onchange = () => { currentAct = aSel.value; stopLoop(); populateSelects(); };
-[sSel, bSel, mSel, eSel, cSel].forEach(el => el.onchange = () => { updateUI(); saveState(); });
+[sSel, bSel, mSel, eSel].forEach(el => el.onchange = () => { updateUI(); saveState(); });
 vBtn.onclick = () => { vibrateOn = !vibrateOn; updateUI(); saveState(); };
 fBtn.onclick = () => { isFlipped = !isFlipped; updateUI(); saveState(); };
 lBtn.onclick = () => { isLooping = !isLooping; lBtn.classList.toggle('active', isLooping); updateUI(); };
@@ -176,18 +164,25 @@ function mainLoop(time) {
     let squash = (vibrateOn) ? 1 + Math.sin(ticker * Math.PI * 2 * 7) * 0.01 : 1;
     ctx.scale(1, squash);
 
-    if (frameToDraw !== 'none') {
-        drawLayer(frameToDraw);
-    } else {
-        const layers = acts[currentAct].layers || ["body", "mouth", "eyes"];
-        layers.forEach(l => {
-            if (l === "coneb" && cSel.value !== 'none') drawLayer("coneb_" + (cSel.value === "yap" ? "blank" : cSel.value));
-            else if (l === "body") drawLayer(bSel.value);
-            else if (l === "mouth") drawLayer(mSel.value);
-            else if (l === "eyes") drawLayer(eSel.value);
-            else if (l === "cone" && cSel.value !== 'none') drawLayer("cone_" + (cSel.value === "yap" ? "yap_" + (animIndex + 1) : cSel.value));
-        });
-    }
+    const layers = acts[currentAct].layers || ["body", "mouth", "eyes"];
+    layers.forEach(l => {
+        let activeFrame = frameToDraw !== 'none' ? frameToDraw : null;
+        
+        if (l === "coneb" || l === "cone") {
+            let coneType = "normal";
+            let pose = activeFrame || bSel.value;
+            if (pose.includes("yap")) coneType = "yap_" + (animIndex + 1);
+            else if (pose.includes("karate")) coneType = "karate";
+            else if (pose.includes("scream")) coneType = "scream";
+            
+            let suffix = (l === "coneb" && (coneType.startsWith("yap") || coneType === "none")) ? "blank" : coneType;
+            drawLayer(l + "_" + suffix);
+        } 
+        else if (l === "body") drawLayer(activeFrame || bSel.value);
+        else if (l === "mouth") drawLayer(activeFrame || mSel.value);
+        else if (l === "eyes") drawLayer(activeFrame || eSel.value);
+    });
+
     ctx.restore(); requestAnimationFrame(mainLoop);
 }
 
